--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
 numpy==1.26.4
 pandas==2.2.2
-streamlit==1.34.0
+streamlit==1.36.0
 streamlit-option-menu==0.3.12
 streamlit-aggrid==1.0.4.post3
 xlsxwriter==3.1.9
+openpyxl==3.1.4
+streamlit-authenticator==0.3.2
