--- a/requirements.txt
+++ b/requirements.txt
@@ -6,3 +6,5 @@ streamlit-aggrid==1.0.4.post3
 xlsxwriter==3.1.9
 openpyxl==3.1.4
 streamlit-authenticator==0.3.2
+cryptography==42.0.8
+ratelimit==2.2.1
